<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
            android:title="@string/preference_app_settings">
            
       <CheckBoxPreference
       			android:key="enableSound"
                android:title="@string/preference_enable_sound"
                android:summaryOn="@string/preference_enable_sound_summary"
                android:summaryOff="@string/preference_enable_sound_summary"
                android:defaultValue="true"
                android:persistent="true"
                />
         <CheckBoxPreference
       			android:key="useBluetoothAudio"
                android:title="@string/preference_enable_bluetooth_audio"
                android:summaryOn="@string/preference_enable_bluetooth_audio_summary"
                android:summaryOff="@string/preference_enable_bluetooth_audio_summary"
                android:defaultValue="false"
                android:persistent="true"
                />
         <CheckBoxPreference
       			android:key="useEarPhonesAudio"
                android:title="@string/preference_enable_earphones_audio"
                android:summaryOn="@string/preference_enable_earphones_audio_summary"
                android:summaryOff="@string/preference_enable_earphones_audio_summary"
                android:defaultValue="true"
                android:persistent="true"
                android:enabled="false"
                android:selectable="false"
                />
         <CheckBoxPreference
       			android:key="usePhoneEarPieceAudio"
                android:title="@string/preference_enable_phone_earpiece_audio"
                android:summaryOn="@string/preference_enable_phone_earpiece_audio_summary"
                android:summaryOff="@string/preference_enable_phone_earpiece_audio_summary"
                android:defaultValue="false"
                android:persistent="true"
                />

		
            
                
    </PreferenceCategory>
    
     <PreferenceCategory
            android:title="@string/preference_manage_data">
            

       
         <CheckBoxPreference
       			android:key="fileManagerInstalled"
                android:title="File Manager Installed"
                android:summaryOff="A file manager wasn't detected, a file manager is needed to view your exported files on your mobile device."
                android:summaryOn=""
                android:defaultValue="false"
                android:persistent="true"
                />
      
        <PreferenceScreen
        		android:key="openAudioDir"
                android:title="@string/preference_view_recorded_audio_data"
                android:enabled="false"
	            android:selectable="false">
            <intent android:action="org.openintents.action.PICK_FILE"
                    android:data="file:///sdcard/AuBlog/Audio" />
        </PreferenceScreen>
                <CheckBoxPreference
       			android:key="uploadWaitForWifi"
                android:title="Upload only over Wifi"
                android:summaryOff="Upload for transcription only when Wifi is active. You should turn this on if your cell phone plan has less than 1GB data transfer per month."
                android:summaryOn="Uploading only over wifi.You can configure exceptions for small transcriptions below."
                android:defaultValue="true"
                android:persistent="true"
                />
       <ca.ilanguage.dictation.widget.preferences.IntegerListPreference
		        android:key="maxUploadOnMobleNetwork"
		        android:title="Max upload when not on Wifi"
		        android:summary="You can configure AuBlog to send only small audio files for transcription."
		        android:entries="@array/max_upload_on_moblie_network_options"
		        android:entryValues="@array/max_upload_on_moblie_network_values"
		        android:defaultValue="2000000" />
		
        <CheckBoxPreference
       			android:key="enableStats"
                android:title="@string/preference_enable_statistics"
                android:summaryOn="@string/preference_enable_statistics_summary"
                android:summaryOff="@string/preference_enable_statistics_summary"
                android:defaultValue="true"
                android:persistent="true"
                />
                    
    </PreferenceCategory>
             
    
    <PreferenceCategory
            android:title="@string/preference_about">

        <PreferenceScreen
                android:title="@string/preference_visit_site">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://ilanguage.ca" />

        </PreferenceScreen>
        
        <PreferenceScreen
                android:title="@string/preference_misc">
            
            <CheckBoxPreference
       			android:key="enableDebug"
                android:title="@string/preference_enable_debug"
                android:summaryOn="@string/preference_enable_debug_summary"
                android:summaryOff="@string/preference_enable_debug_summary"
                android:defaultValue="false"
                android:persistent="true"
                />
                
	        <Preference
	                android:title="@string/preference_about_title"
	                android:summary="@string/preference_about_summary"
	                android:enabled="false"
	                android:selectable="false" />
	                
	                <!-- preference summaries are only 2 lines long, the full summaries below will only appear in horizontal mode or on tablets -->
	        <PreferenceScreen
	                android:title="@string/preference_thanks_title"
	                android:summary="@string/preference_thanks_summary"
	                 >
	                 <!-- add share intent -->
	                 <intent 
	                 	android:action="android.intent.action.VIEW"
                    	android:data="https://market.android.com/details?id=ca.ilanguage.dictation.widget" />
                    
	        </PreferenceScreen>
	                
	        <Preference
	                android:title="@string/preference_licence_title"
	                android:summary="@string/preference_licence_summary"
	                android:enabled="false"
	                android:selectable="false" />
		</PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
